force-app/main/default/objects/ComplaintItem__c/ComplaintItem__c.object-meta.xml
<CustomObject>
    <label>Complaint Item</label>
    <nameField>
        <label>Complaint Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complaint Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>