force-app/main/default/objects/ComplaintItem__c/fields/IsExternalProduct__c.field-meta.xml
<CustomField>
    <fullName>IsExternalProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Product</label>
    <type>Checkbox</type>
</CustomField>