force-app/main/default/objects/ComplaintItem__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Complaint Items</relationshipLabel>
    <relationshipName>Complaint_Items</relationshipName>
    <type>Lookup</type>
</CustomField>