force-app/main/default/objects/ComplaintItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Complaint Items</relationshipLabel>
    <relationshipName>Complaint_Items</relationshipName>
    <type>Lookup</type>
</CustomField>