force-app/main/default/objects/ComplaintItem__c/fields/RefundType__c.field-meta.xml
<CustomField>
    <fullName>RefundType__c</fullName>
    <label>Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>